--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -26,6 +26,6 @@
       </ul>
     </div>
   </div>
-  <%= link_to image_tag("#", class:"logo-white"), "#" %>
+  <%= link_to ("#", class:"logo-white"), "#" %>
   <p>© 役立つ日記</p>
 </div>
